email link update

--- a/functions/views/index.jade
+++ b/functions/views/index.jade
@@ -63,5 +63,5 @@ html(lang='en')
           br
           | Questions? 
           span.contact 
-            a(href='mailto:us@theirtips.com') Email us
+            a(href='mailto:us@theirtips.com' target='_blank') Email us
           | . Tip generously if you can!
