--- a/functions/views/index.jade
+++ b/functions/views/index.jade
@@ -3,8 +3,9 @@ html(lang='en')
     meta(name='viewport', content='initial-scale=1')
     meta(charset='utf-8')
     title Their Tips
-    meta(name='description', content="Virtual tip jar for NYC's queer service folx.")
-    link(rel='stylesheet', href='/style.css')
+    meta(name='description' content="Virtual tip jar for NYC's queer service folx.")
+    link(rel='stylesheet' href='/style.css')
+    link(rel='shortcut icon' type='image/png' href='favicon.png')
     link(href='https://fonts.googleapis.com/css2?family=Catamaran:wght@800&display=swap' rel='stylesheet')
     link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel='stylesheet')
   body
