latest jade build

--- a/functions/views/index.jade
+++ b/functions/views/index.jade
@@ -1,8 +1,8 @@
 html(lang='en')
   head
+    title their tips
     meta(name='viewport', content='initial-scale=1')
     meta(charset='utf-8')
-    title Their Tips
     meta(name='description' content="Virtual tip jar for NYC's queer service folx.")
     link(rel='stylesheet' href='/style.css')
     link(rel='shortcut icon' type='image/png' href='favicon.png')
