added favicon and updated title

--- a/functions/views/index.jade
+++ b/functions/views/index.jade
@@ -54,6 +54,7 @@ html(lang='en')
           | , design and 
           a(href='https://github.com/KassidyKnight/their-tips' target='_blank') development
           |  by three queers in NYC.
+          image()
           br
           a(href='http://thevirtualtipjar.com/' target='_blank') Original idea
           |  and 
