--- a/functions/views/style.css
+++ b/functions/views/style.css
@@ -1,31 +1,37 @@
-html,
-body {
+html {
   overflow-x: hidden;
   min-height: 100%;
   height: 100%;
 }
 
 body {
+  overflow-x: hidden;
+  min-height: 100%;
+  height: 100%;
   box-sizing: border-box;
   margin: 0;
   width: 100%;
   height: 100%;
 }
+
 a {
   color: black;
 }
 a:hover {
   color: #35cc7b;
 }
+
 h1 {
   font-size: clamp(25px, 5vw, 60px);
   line-height: clamp(35px, 5.5vw, 75px);
   font-family: "Catamaran", sans-serif;
 }
+
 h2 {
   font-size: clamp(20px, 2vw, 35px);
   line-height: 40px;
 }
+
 h3 {
   font-size: clamp(12px, 2vw, 20px);
 }
@@ -37,38 +43,31 @@ h3 {
   background-color: #35cc7b;
   color: white;
 }
-
 .left-block h1 {
   padding-left: 4vw;
   padding-right: 4vw;
 }
-
 .left-block h1 .underline {
   text-decoration: underline;
 }
-
 .left-block button {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: clamp(12px, 1.5vw, 20px);
   color: black;
-
   border-color: #35cc7b;
   border-width: 1px;
   border-radius: 12px;
   background-color: white;
-
   position: absolute;
   margin-left: 4vw;
   margin-right: 4vw;
   padding: 20px;
   bottom: 10%;
-
   background: linear-gradient(to left, white 50%, #35cc7b 50%);
   background-size: 202%, 102%;
   background-position: right bottom;
   transition: all 0.3s;
-
   border-style: solid;
 }
 
@@ -83,7 +82,6 @@ h3 {
   align-items: center;
   font-family: "Poppins", sans-serif;
 }
-
 .right-block .link-container {
   position: relative;
   width: 50%;
@@ -92,7 +90,6 @@ h3 {
   margin-bottom: 15px;
   font-size: clamp(10px, 2vw, 14px);
 }
-
 .right-block .link-container a {
   margin-left: auto;
   width: 50%;
@@ -101,7 +98,6 @@ h3 {
   text-decoration: none;
   font-weight: 700;
 }
-
 .right-block .entry {
   position: relative;
   display: flex;
@@ -111,7 +107,6 @@ h3 {
   height: 100%;
   margin: auto;
 }
-
 .right-block .entry a {
   text-decoration: none;
 }
@@ -120,7 +115,6 @@ h3 {
   width: 100%;
   margin: auto;
 }
-
 .entry h3 {
   width: 100%;
   padding-bottom: 0px;
@@ -163,6 +157,7 @@ h3 {
     font-size: clamp(10px, 2vw, 14px);
     line-height: 1.5rem;
   }
+
   .left-block button:hover {
     background-position: left bottom;
     color: white;
@@ -171,7 +166,6 @@ h3 {
     cursor: pointer;
   }
 }
-
 /* mobile breakpoint */
 @media only screen and (max-width: 800px) {
   .left-block {
@@ -205,6 +199,7 @@ h3 {
     height: 100%;
     background-color: #35cc7b;
   }
+
   .right-block {
     position: absolute;
     display: flex;
@@ -216,18 +211,15 @@ h3 {
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
   }
-
   .right-block .link-container {
     width: 80%;
     font-size: 12px;
     color: black;
   }
-
   .right-block .link-container a {
     text-decoration: none;
     font-weight: 600;
   }
-
   .right-block .entry {
     padding-top: 40px;
     padding-bottom: 40px;
@@ -238,7 +230,6 @@ h3 {
     align-items: center;
     height: auto;
   }
-
   .right-block .entry h2 {
     font-size: 20px;
     margin: auto;
@@ -246,21 +237,17 @@ h3 {
     margin-top: 0;
     margin-bottom: 0;
   }
-
   .right-block .entry h2 .emoji {
     font-size: 25px;
   }
-
   .right-block .entry h3 {
     font-size: 15px;
     margin-top: 0;
     margin-bottom: 0;
   }
-
   .right-block .entry h3 .emoji {
     font-size: 20px;
   }
-
   .right-block footer {
     position: relative;
     display: block;
@@ -273,3 +260,5 @@ h3 {
     line-height: 18px;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
